<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".calc.CalcActivity"
    tools:showIn="@layout/activity_calculator">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Calc_Food2"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="@+id/etxtSource7"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/etxtSource7" />

    <EditText
        android:id="@+id/etxtSource7"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:text="@string/Calc_Food2Val"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="@+id/etxtSource2"
        app:layout_constraintStart_toStartOf="@+id/etxtSource2"
        app:layout_constraintTop_toTopOf="@+id/textView21"></EditText>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Calc_Exercise1"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/etxtSource6"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/etxtSource6" />

    <EditText
        android:id="@+id/etxtSource6"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:text="@string/Calc_Exercise1Val"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="@+id/etxtSource5"
        app:layout_constraintStart_toStartOf="@+id/etxtSource5"
        app:layout_constraintTop_toTopOf="@+id/textView19"></EditText>

    <EditText
        android:id="@+id/etxtSource5"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:text="@string/Calc_Exercise2Val"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/etxtSource7"
        app:layout_constraintStart_toStartOf="@+id/etxtSource7"
        app:layout_constraintTop_toTopOf="@+id/textView9"></EditText>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Calc_Food1"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="@+id/etxtSource2"
        app:layout_constraintEnd_toStartOf="@+id/etxtSource2"
        app:layout_constraintTop_toTopOf="@+id/etxtSource2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Calc_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button"
        android:layout_width="245dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/Calc_Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etxtSource2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:background="@android:color/transparent"
        android:text="@string/Calc_Food1Val"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView17"></EditText>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="45dp"
        android:layout_height="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/Source"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/in_amount"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/etxtSource5"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/etxtSource5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Calc_Exercise2"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Calc_TotalIn"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calc_IntakeVal"
        app:layout_constraintBottom_toBottomOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Calc_TotalOut"
        app:layout_constraintEnd_toEndOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calc_OutputVal"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Calc_Net"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/Calc_NetVal"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/textView27" />

</androidx.constraintlayout.widget.ConstraintLayout>